<resources>
    <string name="app_name">Easy Home Workouts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_image">Workout image</string>
    <string name="start">start</string>
    <string name="get_ready">get ready for %s</string>
    <string name="start_exercise">start exercise</string>
    <string name="completed_daily_workout">Congratulations! You completed your daily workout</string>
    <string name="no_i_want_to_continue">No, i want to continue</string>
    <string name="yes_i_want_to_stop">Yes, i want to stop</string>
    <string name="are_you_sure_you_want_to_exit_going_back_now_will_cancel_your_current_workout">Are you sure you want to exit? Going back now will cancel your current workout!</string>
    <string name="BMI">BMI</string>
    <string name="calculate_bmi">calculate bmi</string>
    <string name="height">Height</string>
    <string name="heightFt">Height (ft)</string>
    <string name="heightIn">Height (in)</string>
    <string name="weight">Weight</string>
    <string name="your_bmi_is">Your BMI is %.2f</string>
    <string name="metric_unit">Metric</string>
    <string name="us_unit">Imperial</string>
    <string name="workouts">Workouts</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thur">THUR</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="next_training">Next training</string>
    <string name="workout_schedule">Workout schedule</string>
    <string name="plan">Plan</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="measurement_unit">Measurement unit</string>
    <string name="stat">Statistics</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="personal">Personal</string>
    <string name="general">General</string>
    <string name="my_information">My information</string>
    <string name="workout_history">Workout history</string>
    <string name="leave_a_rating">Leave a rating</string>
    <string name="follow_on_x">Follow on X</string>
    <string name="more">More</string>
    <string name="description">Description</string>
    <string name="muscles">Muscles</string>
    <string name="duration">Duration</string>
    <string name="skip">Skip</string>
    <string name="begin_workout">Begin workout</string>
    <string name="resume_workout">Resume workout</string>
    <string name="skip_the_current_workout">Skip the current workout</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_icon">Learn more icon</string>
    <string name="_s">%ds</string>
    <string name="_seconds">%d seconds</string>
    <string name="_00_00">00:%s</string>
    <string name="time_left">Time left</string>
    <string name="lb">Lb</string>
    <string name="kg">Kg</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="your_bmi_s">Your BMI: %s</string>
    <string name="current_training">Current training</string>
    <string name="previous_workout">Previous workout</string>
    <string name="next_workout">Next workout</string>
    <string name="complete">complete</string>
    <string name="status">Status</string>
    <string name="completion">Completion</string>
    <string name="incomplete">incomplete</string>
    <string name="next">Next</string>
    <string name="today_">Today, %s</string>
    <string name="yesterday_">Yesterday, %s</string>
    <string name="no_previous_workout_yet">No previous workout yet</string>
    <string name="use_device_settings">Use device settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="dark_mode_setting">Dark mode setting</string>
    <string name="apply">Apply</string>
    <string name="welcome_to_app_name">Welcome to Easy Home Workouts!</string>
    <string name="last_exercise">Last exercise reached</string>
    <string name="get_started">Get Started</string>
    <string name="are_you_ready_text">Are you ready to take the first step towards a healthier you? Let\'s get started and embrace a fitter lifestyle!</string>
    <string name="ready_to_begin">Ready to Begin?</string>
    <string name="welcome_text">Get fit, stay healthy! Your App Name brings you easy and effective home workouts without any equipment. Let\'s start your fitness journey.</string>
    <string name="how_it_works_text">Discover a variety of exercises tailored for home workouts. Follow step-by-step guides, track your progress, and achieve your fitness goals effortlessly.</string>
    <string name="how_it_works">How It Works</string>
    <string name="pushups_image">Pushups image</string>
    <string name="home_workout_plan">Home workout plan</string>
    <string name="no_equipment_required">No equipment required</string>
    <string name="dashboard">Dashboard</string>
</resources>