<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/round_fitness_center_24"
        android:title="@string/plan"/>

<!--    <item-->
<!--        android:id="@+id/statsFragment"-->
<!--        android:enabled="true"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:icon="@drawable/stats_icon_selector"-->
<!--        android:title="@string/stat"/>-->

    <item
        android:enabled="true"
        android:id="@+id/libraryFragment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/lib_icon_selector"
        android:title="@string/library"/>


    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/outline_more_horiz_24"
        android:title="@string/more"/>

</menu>