<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.WorkoutDetailsFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/ivExercise"
                android:src="@drawable/pushups"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:contentDescription="@string/pushups_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/description"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvDescription"
                    tools:text="Hello world my name is lorem ipsum donor"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/muscles"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/musclesChipGroup"

                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/duration"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tvDuration"
                    tools:text="20 secs"/>





            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</layout>
