<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/parent_padding_10"
        android:background="?backgroundColor">

        <TextView
            android:id="@+id/tvDarkModeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/dark_mode_setting"
            android:textSize="@dimen/settings_text_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clRadioBtn"
            android:layout_marginTop="@dimen/m10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDarkModeSetting"
            >

            <RadioButton
                android:id="@+id/rbDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rbDark" />

            <RadioButton
                android:id="@+id/rbSystemDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rbLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/rbDark"
                android:textSize="@dimen/settings_text_body"
                app:layout_constraintBottom_toBottomOf="@id/rbDark"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/settings_text_body"
                app:layout_constraintTop_toTopOf="@id/rbLight"
                app:layout_constraintBottom_toBottomOf="@id/rbLight"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/rbSystemDefault"
                android:textSize="@dimen/settings_text_body"
                app:layout_constraintBottom_toBottomOf="@id/rbSystemDefault"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/use_device_settings" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
