<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Primary layout container-->

        <LinearLayout
            android:id="@+id/cl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_exercise"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/workout_image"
                android:scaleType="centerInside"
                android:src="@drawable/pushups" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawablePadding="5dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:id="@+id/tvLearnMore"
                android:text="@string/learn_more"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/outline_info_24" />

            <!--        Start progress indicator container-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/flProgress1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/pIndicatorDuration"
                            style="@style/Theme.WorkoutApp.CircularProgressIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:progress="100"
                            app:indicatorSize="80dp" />

                        <TextView
                            android:id="@+id/tvDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_light"
                            android:includeFontPadding="false"
                            android:lineSpacingExtra="0dp"
                            android:textSize="30sp"
                            tools:text="10s" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/flProgress2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/pIndicatorCountdown"
                            style="@style/Theme.WorkoutApp.CircularProgressIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:progress="100"
                            app:indicatorSize="120dp"
                            app:trackThickness="4dp" />

                        <TextView
                            android:id="@+id/tvCountdown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_light"
                            android:includeFontPadding="false"
                            android:lineSpacingExtra="0dp"
                            android:text="@string/_00_00"
                            android:textSize="30sp" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_left"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/flProgress3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/pIndicatorSets"
                            style="@style/Theme.WorkoutApp.CircularProgressIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:progress="100"
                            app:indicatorSize="80dp" />

                        <ImageButton
                            android:id="@+id/ibNext"
                            style="@style/SkipIconColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/skip_the_current_workout"
                            android:src="@drawable/baseline_skip_next_24" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next" />
                </LinearLayout>

            </LinearLayout>
            <!--        End progress indicator container-->

            <Button
                android:id="@+id/btnBeginWorkout"
                style="@style/Theme.WorkoutApp.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:drawableEnd="@drawable/baseline_play_arrow_24"
                android:text="@string/begin_workout"
                android:textStyle="bold" />

        </LinearLayout>

        <!--        End primary layout container-->

    </ScrollView>


</layout>
